--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Basic Website Draft</title>
+    <title>Sydney DeMets</title>
     <style>
         body {
             background-color: #f0f0f0; /* Light grey background color */
-            font-family: roboto; /* Set a font for the text */
+            font-face: roboto; /* Set a font for the text */
         }
         .container {
             max-width: 800px; /* Center the content within a container */
