--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Basic Website</h1>
-        <p>This is a simple website with a light grey background.</p>
+        <h1>3rd Year PhD student of Information Science at the University of Washington.</h1>
+        <p>Mostly Water.</p>
     </div>
 </body>
 </html>
