--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             max-width: 800px; /* Center the content within a container */
             margin: 0 auto;
             padding: 20px;
-            background-color: #ffffff; /* White background for content */
+            background-color: #CC6666; /* White background for content */
             border: 1px solid #ddd; /* Add a border around the content */
             border-radius: 5px; /* Add rounded corners to the container */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
