--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #f0f0f0; /* Light grey background color */
-            font-family: monaco; /* Set a font for the text */
+            font-family: Monaco; /* Set a font for the text */
         }
         .container {
             max-width: 800px; /* Center the content within a container */
@@ -22,8 +22,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>3rd Year PhD student of Information Science at the University of Washington.</h1>
-        <p>Mostly Water.</p>
+        <h1>Sydney DeMets </h1>
+        <p> 3rd Year PhD student of Information Science at the University of Washington. Mostly Water.</p>
     </div>
 </body>
 </html>
