--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title> Sydney DeMets </title>
     <style>
         body {
-            background-color: #f0f0f0; /* Light grey background color */
+            background-color: #fcfcfc; /* Light grey background color */
+            font-color: #0e09ab
             font-family: Monaco; /* Set a font for the text */
         }
         .container {
             max-width: 800px; /* Center the content within a container */
             margin: 0 auto;
             padding: 20px;
-            background-color: #CC6666; /* White background for content */
+            background-color: #f0d0b9; /* White background for content */
             border: 1px solid #ddd; /* Add a border around the content */
             border-radius: 5px; /* Add rounded corners to the container */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
