--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
         <h1>Sydney DeMets </h1>
-        <p> 3rd Year PhD student of Information Science at the University of Washington. Mostly Water.</p>
+        <p> 3rd Year PhD student of Information Science at the University of Washington. \nMostly Water.</p>
     </div>
 </body>
 </html>
