--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #fcfcfc; /* Light grey background color */
-            font-color: #0e09ab
+            font-color: #0e09ab;
             font-family: Monaco; /* Set a font for the text */
         }
         .container {
