--- a/index.html
+++ b/index.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Sydney DeMets </title>
-    <style>
-        body {
-            background-color: #fcfcfc; /* Light grey background color */
-            font-color: #0e09ab;
-            font-family: Monaco; /* Set a font for the text */
-        }
-        .container {
-            max-width: 800px; /* Center the content within a container */
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f0d0b9; /* White background for content */
-            border: 1px solid #ddd; /* Add a border around the content */
-            border-radius: 5px; /* Add rounded corners to the container */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
-        }
-    </style>
+<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Sydney DeMets </h1>
-        <p> 3rd Year PhD student of Information Science at the University of Washington. \nMostly Water.</p>
-    </div>
+
+<h1>Sydney DeMets</h1>
+<p> PhD student of Information Science at the University of Washington. Mostly water.</p>
 </body>
 </html>
