--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 
 <h1>Sydney DeMets</h1>
-<p1> PhD student of Information Science at the University of Washington. Mostly water.</p1>
+<p> PhD student of Information Science at the University of Washington. Mostly water.</p>
 </body>
 </html>
