--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Sydney DeMets</h1>
+<h1>Sydney DeMets I</h1>
 <p> PhD student of Information Science at the University of Washington. Mostly water.</p>
 </body>
 </html>
