--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </head>
 <body>
 
-<h1>Sydney DeMets I</h1>
+<div class="mainHead">
+<h1>Sydney DeMets</h1>
+</div>
+
+<div class="openingParagraph">
 <p> PhD student of Information Science at the University of Washington. Mostly water.</p>
+</div>
 </body>
 </html>
