--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <body>
 
 <div class="mainHead">
-<h1>Sydney DeMets</h1>
+<h1>Sydney DeMets I</h1>
 </div>
 
 <div class="openingParagraph">
-<p> PhD student of Information Science at the University of Washington. Mostly water.</p>
+<p> Doctoral student of Information Science at the University of Washington. Mostly water.</p>
 </div>
 </body>
 </html>
