--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </div>
 
 <div class="openingParagraph">
-<p> Doctoral student of Information Science at the University of Washington. Mostly water.</p>
+<p> Doctoral student of Information Science at the University of Washington. 
+  Interested in modeling how false and misleading information spreads over podcasts using a relational events framework. 
+  Spends most free time walking up hills. 
+  Mostly water.</p>
 </div>
 </body>
 </html>
