--- a/index.html
+++ b/index.html
@@ -6,14 +6,28 @@
 <body>
 
 <div class="mainHead">
-<h1>Sydney DeMets I</h1>
+<h1>Sydney</h1>
 </div>
 
+<div class="subHead">
+<h1>About me: </h1>
+</div>
+  
 <div class="openingParagraph">
-<p> Doctoral student of Information Science at the University of Washington. 
-  Interested in modeling how false and misleading information spreads over podcasts using a relational events framework. 
-  Spends most free time walking up hills. 
-  Mostly water.</p>
+<p> - Full Name: Sydney DeMets
+  - Currently: Seattle, WA
+  - Occupation: Doctoral student of Information Science at the University of Washington. 
+  - Academic interests: Modeling how false and misleading information spread over podcasts using a relational events framework.
+  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.
+  - Fun interests: I spend most of my free time walking up hills or skiing. I also am passionate about ending the tyranny of pink and teal
+  outdoor gear for women, work which you can check out here.
+</p>
+</div>
+</body>
+</html>
+
+<div class="subHead">
+<p> Curriculum vitae: </p>
 </div>
 </body>
 </html>
