--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </div>
   
 <div class="openingParagraph">
-<p> - Full Name: Sydney DeMets
-  - Currently: Seattle, WA
-  - Occupation: Doctoral student of Information Science at the University of Washington. 
+<p> - Full Name: Sydney DeMets<br>
+  - Currently: Seattle, WA<br>
+  - Occupation: Doctoral student of Information Science at the University of Washington.<br> 
   - Academic interests: Modeling how false and misleading information spread over podcasts using a relational events framework.
-  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.
+  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.<br>
   - Fun interests: I spend most of my free time walking up hills or skiing. I also am passionate about ending the tyranny of pink and teal
   outdoor gear for women, work which you can check out here.
 </p>
