--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 </div>
   
 <div class="openingParagraph">
-<ul> - Full Name: Sydney DeMets
-  - Currently: Seattle, WA
-  - Occupation: Doctoral student of Information Science at the University of Washington.
-  - Academic interests: Modeling how false and misleading information spread over podcasts using a relational events framework.
-  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.
-  - Fun interests: I spend most of my free time walking up hills or skiing. I also am passionate about ending the tyranny of pink and teal
-  outdoor gear for women, work which you can check out here.
+<ul> 
+  <li>Full Name: Sydney DeMets<\li>
+  <li>Currently: Seattle, WA<\li>
+  <li>Occupation: Doctoral student of Information Science at the University of Washington.<\li>
+  <li>Academic interests: Modeling how false and misleading information spread over podcasts using a relational events framework.
+  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.<\li>
+  <li>Fun interests: I spend most of my free time walking up hills or skiing. I also am passionate about ending the tyranny of pink and teal
+  outdoor gear for women, work which you can check out here.<\li>
 </ul>
 </div>
 </body>
