--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
   
 <div class="openingParagraph">
-<ul> 
+<ul class="dashed"> 
   <li>Full Name: Sydney DeMets<\li>
   <li>Currently: Seattle, WA<\li>
   <li>Occupation: Doctoral student of Information Science at the University of Washington.<\li>
