--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   
 <div class="openingParagraph">
 <ul class="dashed"> 
-  <li>Full Name: Sydney DeMets<li>
-  <li>Currently: Seattle, WA<li>
-  <li>Occupation: Doctoral student of Information Science at the University of Washington.<li>
+  <li>Full Name: Sydney DeMets</li>
+  <li>Currently: Seattle, WA</li>
+  <li>Occupation: Doctoral student of Information Science at the University of Washington.</li>
   <li>Academic interests: Modeling how false and misleading information spread over podcasts using a relational events framework.
-  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.<li>
+  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.< /li>
   <li>Fun interests: I spend most of my free time walking up hills or skiing. I also am passionate about ending the tyranny of pink and teal
-  outdoor gear for women, work which you can check out here.<li>
+  outdoor gear for women, work which you can check out here.< /li>
 </ul>
 </div>
 </body>
