--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>About me: </h1>
 </div>
   
-<div class="openingParagraph">
+<div class="w3-container">
 <ul class="dashed"> 
   <li>Full Name: Sydney DeMets</li>
   <li>Currently: Seattle, WA</li>
