--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <div class="mainHead">
-<h1>sydney deMets</h1>
+<h1>Sydney DeMets</h1>
 </div>
 
 <div class="subHead">
@@ -21,11 +21,21 @@
   <li>Academic interests: Modeling how false and misleading information spread over podcasts using a relational events framework.
   Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.< /li>
   <li>Fun interests: I spend most of my free time walking up hills or skiing. I also am passionate about ending the tyranny of pink and teal
-  outdoor gear for women, work which you can check out here.< /li>
+  outdoor gear for women, work which you can check out here.
 </ul>
 </div>
 </body>
 </html>
+
+<ul class="c-rainbow">
+ <li class="c-rainbow__layer c-rainbow__layer--white">sydney</li>
+ <li class="c-rainbow__layer c-rainbow__layer--orange">sydney</li>
+ <li class="c-rainbow__layer c-rainbow__layer--red">sydney</li>
+ <li class="c-rainbow__layer c-rainbow__layer--violet">sydney</li>
+ <li class="c-rainbow__layer c-rainbow__layer--blue">sydney</li>
+ <li class="c-rainbow__layer c-rainbow__layer--green">sydney</li>
+ <li class="c-rainbow__layer c-rainbow__layer--yellow">sydney</li>
+</ul>
 
 <div class="subHead">
 <p> Curriculum vitae: </p>
