--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <div class="content">
-<h1>Sydney DeMets</h1>
+  <h2 class="text_shadows">sydney demets</h2>
 </div>
 
 <div class="subHead">
