--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <div class="mainHead">
-  <h2 class="text_shadows">sydney demets</h2>
+  <h2 class="text_shadows">sydney</h2>
 </div>
 
 <div class="subHead">
@@ -19,7 +19,7 @@
   <li>Currently: Seattle, WA</li>
   <li>Occupation: Doctoral student of Information Science at the University of Washington.</li>
   <li>Academic interests: Modeling how false and misleading information spread over podcasts using a relational events framework.
-  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.< /li>
+  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.
   <li>Fun interests: I spend most of my free time walking up hills or skiing. I also am passionate about ending the tyranny of pink and teal
   outdoor gear for women, work which you can check out here.
 </ul>
