--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 <ul class="dashed"> 
   <li>Full Name: Sydney DeMets</li>
   <li>Currently: Seattle, WA</li>
-  <li>Occupation: Doctoral student of Information Science at the University of Washington.</li>
-  <li>Academic interests: Modeling how false and misleading information spread over podcasts using a relational events framework.
-  Working towards developing a media-sensitive model of false and misleading information transfer. Big nerd about social network analysis.
-  <li>Fun interests: I spend most of my free time walking up hills or skiing. I also am passionate about ending the tyranny of pink and teal
-  outdoor gear for women, work which you can check out here.
+  <li>Occupation: Doctoral candidate of Information Science at the University of Washington.</li>
+  <li>Academic interests: I model the diffusion of false and misleading information across digital channels, especially podcasts, using a networked framework. I am particularly
+    interested in the impact of medium (e.g. podcasts, text-based social media, video, etcetera) on the longevity, alteration, and diffusion of rumors. 
+  <li>Fun interests: I spend most of my free time walking up hills or skiing. 
 </ul>
 </div>
 </body>
